<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    <!-- поле результата -->
    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operationField"/>
    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/resultField"
        />
    <!-- поле ввода чисел -->
    <EditText
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/numberField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            style="@style/MyStyle"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_8"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_9"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_divide"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_clear"
            android:onClick="onOperationClick"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyStyle"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyStyle"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:backgroundTint="@color/grey"
            android:textSize="@dimen/button_text"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyStyle"
            android:layout_height="wrap_content"
            android:text="@string/_multiiply"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_percent"
            android:onClick="onOperationClick"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_1"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyStyle"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyStyle"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_minus"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_pow"
            android:onClick="onOperationClick"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/forthButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_0"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_comma"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_plus"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_equals"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyStyle"
            android:text="@string/_sign"
            android:onClick="onOperationClick"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>